--- a/reto2/src/main/resources/templates/newOrder.html
+++ b/reto2/src/main/resources/templates/newOrder.html
@@ -12,7 +12,7 @@
         customerName: name,
         products: [],
       };
-      fetch("http://localhost:8080/api/v1/orders", {
+      fetch("api/v1/orders", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
@@ -26,7 +26,7 @@
         })
         .then(function (data) {
           console.log(data);
-          window.location.href = "http://localhost:8080";
+          window.location.href = "/";
         });
     }
   </script>
